NQE: Update function signature to return a base::Optional value.

TBR=mmenke@chromium.org

Bug: 753008
Change-Id: I9d776bd05a60eb731057ab39d196c58a0ab6855f
Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester
Reviewed-on: https://chromium-review.googlesource.com/607790
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Helen Li <xunjieli@chromium.org>
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493256}