net/nqe/network_qualities_prefs_manager.cc
@@ -9,6 +9,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <utility>
 
 #include "base/bind.h"
+#include "base/optional.h"
 #include "base/rand_util.h"
 #include "base/sequenced_task_runner.h"
 #include "base/threading/thread_checker.h"
@@ -42,18 +43,16 @@ ParsedPrefs ConvertDictionaryValueToMap(const base::DictionaryValue* value) {
         nqe::internal::NetworkID::FromString(it.key());
 
     std::string effective_connection_type_string;
-    bool effective_connection_type_available =
+    const bool effective_connection_type_available =
         it.value().GetAsString(&effective_connection_type_string);
     DCHECK(effective_connection_type_available);
 
-    EffectiveConnectionType effective_connection_type =
-        EFFECTIVE_CONNECTION_TYPE_UNKNOWN;
-    effective_connection_type_available = GetEffectiveConnectionTypeForName(
-        effective_connection_type_string, &effective_connection_type);
-    DCHECK(effective_connection_type_available);
+    base::Optional<EffectiveConnectionType> effective_connection_type =
+        GetEffectiveConnectionTypeForName(effective_connection_type_string);
+    DCHECK(effective_connection_type.has_value());
 
     nqe::internal::CachedNetworkQuality cached_network_quality(
-        effective_connection_type);
+        effective_connection_type.value_or(EFFECTIVE_CONNECTION_TYPE_UNKNOWN));
     read_prefs[network_id] = cached_network_quality;
   }
   return read_prefs;
