net/nqe/effective_connection_type_unittest.cc
@@ -7,6 +7,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include <string>
 
+#include "base/optional.h"
 #include "testing/gtest/include/gtest/gtest.h"
 
 namespace net {
@@ -16,25 +17,11 @@ namespace {
 // Tests that the effective connection type is converted correctly to a
 // descriptive string name, and vice-versa.
 TEST(EffectiveConnectionTypeTest, NameConnectionTypeConversion) {
-  // Initialize |converted_effective_connection_type| to a value other than
-  // EFFECTIVE_CONNECTION_TYPE_UNKNOWN, and verify that it is set to
-  // EFFECTIVE_CONNECTION_TYPE_UNKNOWN when an invalid effective connection
-  // type name is provided.
-  EffectiveConnectionType converted_effective_connection_type =
-      EFFECTIVE_CONNECTION_TYPE_SLOW_2G;
+  // Verify GetEffectiveConnectionTypeForName() returns an unset value when an
+  // invalid effective connection type name is provided.
   EXPECT_FALSE(
-      GetEffectiveConnectionTypeForName("InvalidEffectiveConnectionTypeName",
-                                        &converted_effective_connection_type));
-  EXPECT_EQ(EFFECTIVE_CONNECTION_TYPE_UNKNOWN,
-            converted_effective_connection_type);
-
-  // Reset |converted_effective_connection_type| to a value other than
-  // EFFECTIVE_CONNECTION_TYPE_UNKNOWN.
-  converted_effective_connection_type = EFFECTIVE_CONNECTION_TYPE_SLOW_2G;
-  EXPECT_FALSE(GetEffectiveConnectionTypeForName(
-      std::string(), &converted_effective_connection_type));
-  EXPECT_EQ(EFFECTIVE_CONNECTION_TYPE_UNKNOWN,
-            converted_effective_connection_type);
+      GetEffectiveConnectionTypeForName("InvalidEffectiveConnectionTypeName"));
+  EXPECT_FALSE(GetEffectiveConnectionTypeForName(std::string()));
 
   for (size_t i = 0; i < EFFECTIVE_CONNECTION_TYPE_LAST; ++i) {
     const EffectiveConnectionType effective_connection_type =
@@ -52,24 +39,22 @@ TEST(EffectiveConnectionTypeTest, NameConnectionTypeConversion) {
                     effective_connection_type));
     }
 
-    EXPECT_TRUE(GetEffectiveConnectionTypeForName(
-        connection_type_name, &converted_effective_connection_type));
-    EXPECT_EQ(effective_connection_type, converted_effective_connection_type);
+    EXPECT_EQ(effective_connection_type,
+              GetEffectiveConnectionTypeForName(connection_type_name));
   }
 }
 // Tests that the Slow 2G effective connection type is converted correctly to a
 // descriptive string name, and vice-versa.
 TEST(EffectiveConnectionTypeTest, Slow2GTypeConversion) {
-  EffectiveConnectionType type;
-
   // GetEffectiveConnectionTypeForName should return Slow2G as effective
   // connection type for both the deprecated and the current string
   // representation.
-  EXPECT_TRUE(GetEffectiveConnectionTypeForName("Slow2G", &type));
-  EXPECT_EQ(EFFECTIVE_CONNECTION_TYPE_SLOW_2G, type);
+  base::Optional<EffectiveConnectionType> type =
+      GetEffectiveConnectionTypeForName("Slow2G");
+  EXPECT_EQ(EFFECTIVE_CONNECTION_TYPE_SLOW_2G, type.value());
 
-  EXPECT_TRUE(GetEffectiveConnectionTypeForName("Slow-2G", &type));
-  EXPECT_EQ(EFFECTIVE_CONNECTION_TYPE_SLOW_2G, type);
+  type = GetEffectiveConnectionTypeForName("Slow-2G");
+  EXPECT_EQ(EFFECTIVE_CONNECTION_TYPE_SLOW_2G, type.value());
 
   EXPECT_EQ("Slow-2G", std::string(GetNameForEffectiveConnectionType(
                            EFFECTIVE_CONNECTION_TYPE_SLOW_2G)));
